--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,21 @@
-$cor_principal: white;
+$cor_principal:rgba(250,250,250, 1);
+
+
+
+%texto-padrao{
+    color: rgba(142, 142, 142, 1);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+}
+
+%display-grid{
+    display: grid;
+    grid-template-columns:2;
+    grid-column: auto, auto;
+}
+%centralizar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
