--- a/css/style.scss
+++ b/css/style.scss
@@ -1,21 +1,56 @@
-$cor_principal:rgba(250,250,250, 1);
+$cor_principal: rgb(247, 247, 247) ;
 
 
+body {
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background-color:$cor_principal;
+}
 
-%texto-padrao{
+%texto-padrao {
     color: rgba(142, 142, 142, 1);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
 }
 
-%display-grid{
+%display-grid {
     display: grid;
-    grid-template-columns:2;
-    grid-column: auto, auto;
+    grid-template-columns: 50% auto;
 }
-%centralizar{
+
+%centralizar {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.box-top {
+    width: 100%;
+    height: 85vh;
+    @extend %display-grid;
+
+}
+
+.container-left {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    img{
+        box-shadow: none;
+        border: none;
+        border-radius: 10px;
+        margin-right: 10px;
+    }
+
+}
+
+.container-right {
+   display: flex;
+   flex-direction: column;
+   align-items: initial;
+   margin-left: 20px;
+}
