--- a/css/style.css
+++ b/css/style.css
@@ -28,5 +28,14 @@ body {
 .container-right {
   display: flex;
   flex-direction: column;
-  align-items: initial;
-  margin-left: 20px; }
+  margin-left: 20px;
+  margin-top: 50px; }
+  .container-right .right-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .container-right .container-right-box {
+    max-width: 400px;
+    background-color: white; }
+    .container-right .container-right-box img {
+      width: 200px; }
