--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,37 @@ body {
   .container-right .right-top {
     display: flex;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    gap: 8px; }
+    .container-right .right-top input {
+      height: 35px;
+      width: 70%;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+      padding-left: 5px;
+      background-color: #fafafa;
+      border-radius: 4px; }
+    .container-right .right-top .right-top-space {
+      display: flex;
+      width: 100%; }
+      .container-right .right-top .right-top-space hr {
+        color: black;
+        width: 3rem;
+        height: 1px; }
   .container-right .container-right-box {
-    max-width: 400px;
-    background-color: white; }
+    max-width: 350px;
+    background-color: white;
+    height: 400px;
+    border: 1px solid rgba(0, 0, 0, 0.1); }
     .container-right .container-right-box img {
-      width: 200px; }
+      margin-bottom: 30px;
+      width: 200px;
+      margin-top: 25px; }
+    .container-right .container-right-box button {
+      width: 73%;
+      height: 30px;
+      font-weight: bold;
+      color: white;
+      background-color: #c6defa;
+      border-radius: 5px;
+      border: none;
+      margin-top: 10px; }
