--- a/css/style.scss
+++ b/css/style.scss
@@ -59,13 +59,45 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 8px;
+        input{
+            height: 35px;
+            width: 70%;
+            border: 1px solid rgba(0, 0, 0, .2);
+            padding-left: 5px;
+            background-color: rgb(250, 250, 250);
+            border-radius: 4px;
+        }
+        .right-top-space{
+            display: flex;
+            width: 100%;
+            hr{
+                color: black;
+                width: 3rem;
+                height: 1px;
+            }
+            
+        }
     }
     .container-right-box {
-        max-width: 400px;
+        max-width: 350px;
         background-color: white;
-
+        height: 400px;
+        border: 1px solid rgba(0, 0, 0, .1);
         img {
+            margin-bottom: 30px;
             width: 200px;
+            margin-top: 25px;
+        }
+        button{
+            width: 73%;
+            height: 30px;
+            font-weight: bold;
+            color: white;
+            background-color: rgb(198, 222, 250);
+            border-radius: 5px;
+            border: none;
+            margin-top: 10px;
         }
     }
 }
