--- a/css/style.scss
+++ b/css/style.scss
@@ -70,12 +70,31 @@ body {
         }
         .right-top-space{
             display: flex;
-            width: 100%;
-            hr{
-                color: black;
-                width: 3rem;
-                height: 1px;
+            justify-content: center;
+            width: 73%;
+            #left-hr{
+                display: flex;
+                justify-content: end;
+                margin-right: 10px;
+                width: 41%;
+                hr{
+                    background-color:rgba(0, 0, 0, .1);
+                    width: 100%;
+                    border: none;
+                }
             }
+            #right-hr{
+                display: flex;
+                justify-content: initial;
+                margin-left: 10px;
+                width: 41%;
+                hr{
+                    background-color: rgba(0, 0, 0, .1);
+                    width: 100%;
+                    border: none;
+                }
+            }
+            
             
         }
     }
