--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,8 @@ body {
         border: none;
         border-radius: 10px;
         margin-right: 10px;
+        height: 580px;
+        width: 380px;
     }
 
 }
@@ -55,12 +57,13 @@ body {
     margin-left: 20px;
     margin-top: 50px;
 
-    .right-top{
+    .right-top {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 8px;
-        input{
+
+        input {
             height: 35px;
             width: 70%;
             border: 1px solid rgba(0, 0, 0, .2);
@@ -68,47 +71,63 @@ body {
             background-color: rgb(250, 250, 250);
             border-radius: 4px;
         }
-        .right-top-space{
+
+        .right-top-space {
             display: flex;
             justify-content: center;
             width: 73%;
-            #left-hr{
+            margin-bottom: 10px;
+            color: rgba(142, 142, 142, 1);
+            font-family: inherit;
+            font-size: 14px;
+            #left-hr {
                 display: flex;
                 justify-content: end;
                 margin-right: 10px;
                 width: 41%;
-                hr{
-                    background-color:rgba(0, 0, 0, .1);
-                    width: 100%;
-                    border: none;
-                }
-            }
-            #right-hr{
-                display: flex;
-                justify-content: initial;
-                margin-left: 10px;
-                width: 41%;
-                hr{
+
+                hr {
                     background-color: rgba(0, 0, 0, .1);
                     width: 100%;
                     border: none;
                 }
             }
-            
-            
+
+            #right-hr {
+                display: flex;
+                justify-content: initial;
+                margin-left: 10px;
+                width: 41%;
+
+                hr {
+                    background-color: rgba(0, 0, 0, .1);
+                    width: 100%;
+                    border: none;
+                }
+            }
+
+
         }
     }
+
     .container-right-box {
         max-width: 350px;
         background-color: white;
         height: 400px;
         border: 1px solid rgba(0, 0, 0, .1);
+        a{
+            text-decoration: none;
+            font-size: 12px;
+            font-family: Arial, Helvetica, sans-serif;
+            color: #385185;
+        }
         img {
             margin-bottom: 30px;
             width: 200px;
             margin-top: 25px;
         }
-        button{
+
+        button {
             width: 73%;
             height: 30px;
             font-weight: bold;
@@ -118,5 +137,27 @@ body {
             border: none;
             margin-top: 10px;
         }
+        margin-bottom: 10px;
+
     }
+}
+
+.option-enter {
+    display: flex;
+    gap: 5px;
+    height: 28px;
+    align-content: center;
+
+    a {
+        text-align: center;
+        text-decoration: none;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #385185;
+        font-weight: 800;
+        font-size: 16px;
+        svg{
+            margin-right: 5px;
+        }
+    }
+
 }
