--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,10 @@ body {
     box-shadow: none;
     border: none;
     border-radius: 10px;
-    margin-right: 10px;
+    margin-right: 8px;
     height: 580px;
-    width: 380px; }
+    width: 380px;
+    margin-bottom: 40px; }
 
 .container-right {
   display: flex;
@@ -74,7 +75,7 @@ body {
     max-width: 350px;
     background-color: white;
     height: 400px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1.5px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 10px; }
     .container-right .container-right-box a {
       text-decoration: none;
@@ -99,13 +100,15 @@ body {
   display: flex;
   gap: 5px;
   height: 28px;
-  align-content: center; }
+  align-content: center;
+  margin-top: 10px;
+  margin-bottom: 12px; }
   .option-enter a {
     text-align: center;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     color: #385185;
     font-weight: 800;
-    font-size: 16px; }
+    font-size: 14px !important; }
     .option-enter a svg {
       margin-right: 5px; }
