--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@ body {
   left: 0;
   display: flex;
   flex-direction: column;
-  background-color: #f7f7f7; }
+  background-color: #f7f7f7;
+  font-family: Arial, Helvetica, sans-serif; }
 
 .box-top {
   display: grid;
@@ -112,3 +113,20 @@ body {
     font-size: 14px !important; }
     .option-enter a svg {
       margin-right: 5px; }
+
+.right-mid {
+  display: flex;
+  background-color: white;
+  max-width: 350px;
+  height: 60px;
+  border: 1.5px solid rgba(0, 0, 0, 0.1);
+  align-items: center;
+  justify-content: center;
+  gap: 6px; }
+  .right-mid span {
+    font-size: 14px; }
+  .right-mid a {
+    text-decoration: none;
+    color: #0095f6;
+    font-weight: 600;
+    font-size: 14px; }
