new: novas linhas adicionada

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
-  margin-top: 50px; }
+  margin-top: 50px;
+  width: auto; }
   .container-right .right-top {
     display: flex;
     flex-direction: column;
@@ -130,3 +131,12 @@ body {
     color: #0095f6;
     font-weight: 600;
     font-size: 14px; }
+
+.right-bottom {
+  margin-top: 20px;
+  max-width: 350px;
+  align-content: center;
+  justify-content: center;
+  text-align: center; }
+  .right-bottom span {
+    margin-bottom: 20px; }
