--- a/css/style.scss
+++ b/css/style.scss
@@ -201,6 +201,11 @@ body {
 }
 
 .box-bottom{
+    display: flex;
     font-size: 14px;
-    text-align: center;
+    justify-content: center;
+
+    font-family: inherit;
+    color: rgba(142, 142, 142, 1);
+    
 }
