--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #f7f7f7;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center; }
 
 .box-top {
   display: grid;
@@ -145,5 +146,10 @@ body {
   display: flex;
   font-size: 14px;
   justify-content: center;
+  gap: 5px;
   font-family: inherit;
-  color: #8e8e8e; }
+  color: #8e8e8e;
+  height: 60px; }
+  .box-bottom .text {
+    width: calc(auto);
+    height: 20px; }
