new: novos dados adicionados

--- a/css/style.scss
+++ b/css/style.scss
@@ -223,3 +223,14 @@ body {
     color: rgba(142, 142, 142, 1);
     margin-top: 5px;
 }
+
+.box-bottom-3{
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+#select-lang{
+    width: 120px;
+}
