--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,12 @@ body {
   font-family: inherit;
   color: #8e8e8e;
   margin-top: 5px; }
+
+.box-bottom-3 {
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+
+#select-lang {
+  width: 120px; }
