--- a/css/style.css
+++ b/css/style.css
@@ -166,9 +166,17 @@ body {
   margin-top: 25px;
   display: flex;
   justify-content: center;
-  width: 100%; }
+  width: 100%;
+  gap: 10px;
+  background-color: #fafafa; }
+  .box-bottom-3 span {
+    font-size: 13px;
+    font-family: inherit;
+    color: #8e8e8e; }
 
 #select-lang {
   width: 120px;
-  background-color: #fafafa;
-  border: none; }
+  background-color: 1;
+  border: none;
+  color: #8e8e8e;
+  border-color: rgba(250, 250, 250, 0.6); }
