--- a/css/style.scss
+++ b/css/style.scss
@@ -229,10 +229,19 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
+    gap: 10px;
+    background-color: rgb(250, 250, 250);
+    span{
+        font-size: 13px;
+        font-family: inherit;
+        color: rgba(142, 142, 142, 1);
+    }
 }
 
 #select-lang{
     width: 120px;
-    background-color: rgb(250, 250, 250);
+    background-color:opacity($color: rgb(250,250,250));
     border: none;
+    color: rgba(142, 142, 142, 1);
+    border-color: rgba(250, 250, 250, .6);
 }
